# AI-for-Anesthesia-Decision-Support

./: .gitignore  README.md  pyproject.toml
apps/dashboard/: app.py
apps/dashboard/views/: adaptive.py  case.py  cohort.py  compare.py  quality.py
configs/: data.yaml
data/: processed.dvc
docs/superpowers/plans/: 2026-07-04-m1-data-explorer.md  2026-07-04-m1-data-foundation.md  2026-07-05-adaptive-dosing-mvp.md
docs/superpowers/specs/: 2026-07-04-adaptive-dose-ai-research-design.md  2026-07-04-m1-data-explorer-design.md  2026-07-05-adaptive-dosing-mvp-design.md
notebooks/: 01_eda.py
pipelines/: build_dataset.py
src/adaptivedose/: config.py
src/adaptivedose/adaptive/: demo.py
src/adaptivedose/dashboard/: charts.py  data_access.py  stats.py
src/adaptivedose/data/: builder.py  clean.py  cohort.py  loader.py  resample.py  split.py  vitaldb_client.py
src/adaptivedose/models/: personalize.py  requirement.py
src/adaptivedose/utils/: io.py
tests/: conftest.py
tests/adaptive/: test_demo.py
tests/dashboard/: test_charts.py  test_data_access.py  test_stats.py
tests/data/: test_builder.py  test_clean.py  test_cohort.py  test_config.py  test_loader.py  test_resample.py  test_split.py  test_vitaldb_client.py
tests/models/: test_personalize.py  test_requirement.py
