[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptivedose"
version = "0.1.0"
description = "Research CDSS for adaptive anesthesia dosing (VitalDB)."
requires-python = ">=3.10"
dependencies = [
    "vitaldb>=1.7.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=14.0",
    "omegaconf>=2.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "dvc>=3.0"]
dashboard = ["streamlit>=1.58", "plotly>=6.8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
